--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>My App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="./src/index.js"></script>
+    <main>
+      <div id="app"></div>
+      <script type="module" src="./src/index.js"></script>
+    </main>
   </body>
 </html>
