--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <title>My App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   </head>
   <body>
     <main>
