--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <main>
       <div id="app"></div>
-      <script type="module" src="./src/index.js"></script>
+      <script type="module" src="./src/index.ts"></script>
     </main>
   </body>
 </html>
